// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.email";
option java_outer_classname = "EmailProto";
option objc_class_prefix = "HLW";
// option go_package = "email-wizard/backend/clients/email_grpc_client";

package database;

// The database service definition.
service DatabaseHelper {
  rpc AddRow (AddRowRequest) returns (Response) {}
  rpc UpdateValue (UpdateValueRequest) returns (Response) {}
  rpc DeleteRow (DeleteRowRequest) returns (Response) {}
  rpc Query (QueryRequest) returns (Response) {}
}

// complex data is supposed to be serialized into JSON
message AddRowRequest {
  string row = 1;
  string table = 2;
}

message UpdateValueRequest {
  string valueMap = 1;  // JSON
  string condition = 2;
  string table = 3;
}

message DeleteRowRequest {
  string condition = 1;
  string table = 2;
}

message QueryRequest {
  repeated string columns = 1;
  string condition = 2;
  string table = 3;
}

message Response {
  string message = 1;
}
